# TaskManager

./: README.md
client/: CMakeLists.txt
client/src/: CMakeLists.txt
server/: CMakeLists.txt
server/data/database/: databaseConfig.json
server/src/: CMakeLists.txt  main.cpp
server/src/server-https/: CMakeLists.txt  server-https.cpp  server-https.h
server/src/server-https/database/: database.cpp  database.h  database.hpp  db-connects.cpp  db-connects.h  db-connects.hpp  db-interface.h  db-table.cpp  db-table.h  db-table.hpp  db-user-data.cpp  db-user-data.h  db-user-data.hpp
server/src/server-https/json-parser/: json-parser.cpp  json-parser.h
server/src/server-https/json-parser/structures/: json-db-user-data.cpp  json-db-user-data.h
